--- a/WeatherApp/style.css
+++ b/WeatherApp/style.css
@@ -10,7 +10,7 @@
     font-family: "Poppins", sans-serif !important;
     background-image: url("images/sunny.jpg");
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -22,7 +22,7 @@
 .overlay{
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: rgb(139 139 139 / 34%);
     z-index: -1;
 }
@@ -111,6 +111,7 @@
 .forecast-section{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
