--- a/Card Game/style.css
+++ b/Card Game/style.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    height: 100vh;
+    height: 100%;
     background-color: var(--black-color);
     font-family: var(--primary-font);
     display: flex;
@@ -52,7 +52,7 @@ body{
 .modal{
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: var(--primary-color-50);
     z-index: 2;
     backdrop-filter: blur(3px);
