--- a/Signeasy Signature App/CSS/style.css
+++ b/Signeasy Signature App/CSS/style.css
@@ -20,6 +20,7 @@
     border:1px solid var(--primary-color);
     border-radius: 6px;
     text-decoration: none;
+    text-align: center;
 }
 
 .hero-section{
@@ -50,4 +51,11 @@
 
 .color-section .form-control{
     height: 38px;
+}
+
+/* Canvas */
+.canvas{
+    border: 1px solid var(--secondary-color);
+    width: 100%;
+    height: 512px;
 }
